2007-07-17  Jaap Haitsma <jaap@haitsma.org>

	* GNOME_GeyesApplet.xml: Use gtk-about i.s.o. gnome-stock-about
	Fixes bug #456955

	* geyes.c: (about_cb), (destroy_cb), (geyes_applet_fill):
	* geyes.h:
	Use g_set_application name such that the application name
	gets shown correctly in the about dialog. Convert usage of GtkTooltips
	to new tooltips API of GTK 2.12 Fixes bug #457145

2007-07-14  Callum McKenzie  <callum@spooky-possum.org>

	* Makefile.am (install-data-local): Use = instead of == for
	comparisons to make the scripts work on BSD. See bug #456701.

2006-12-04  Claudio Saavedra  <csaavedra@alumnos.utalca.cl>

	* themes.c: (theme_selected_cb), (properties_cb): Show only the theme
	names and not complete paths. Fixes bug #381294.

2006-11-15  Kjartan Maraas  <kmaraas@gnome.org>

	* docs/C/geyes.xml: Fix build.

2006-10-02  Davyd Madeley  <davyd@madeley.id.au>

	* themes/Makefile.am:
	- remove spurious \ 

2006-09-02  Davyd Madeley  <davyd@madeley.id.au>

	* themes/Tango/config:
	* themes/Tango/tango-eye.png:
	* themes/Tango/tango-pupil.png:
	- added a Tango eye theme

2005-09-28  Ryan Lortie  <desrt@desrt.ca>

	* docs/Makefile.am: add DOC_FIGURES list to get .png's into the
	  tarball.  Closes bug #317476.

2005-07-20  Davyd Madeley  <dabyd@madeley.id.au>

	* docs/*: Remove unwanted files. Need to remove XML files once they've
	  been converted to po files.
	
	* docs/Makefile.am:
	* docs/geyes.omf.in:
	* docs/C/geyes.xml: g-d-u-ise

2005-06-30  Pedro Villavicencio Garrido  <pvillavi@gnome.org>

	* geyes.c (help_cb): 
	* themes.c (phelp_cb): use GtkMessageDialog instead of 
	g_warning's.

2005-06-26  Davyd Madeley  <davyd@madeley.id.au>

	* geyes.c:
	* geyes.h: Fix about dialog.

2005-03-20  Kjartan Maraas  <kmaraas@gnome.org>

	* geyes.c: (about_cb): Make the dialog resizable.
	Closes bug #170709. Patch from Michael Terry.
	* geyes.h:
	* themes.c: (properties_cb): Clean up some.

2005-02-27  Ryan Lortie  <desrt@desrt.ca>
