@@ -23,7 +23,7 @@
 		<item value="IDL:Bonobo/Control:1.0"/>
 		<item value="IDL:Bonobo/Unknown:1.0"/>
 	</oaf_attribute>
-	<oaf_attribute name="name" type="string" _value="Geyes"/>
+	<oaf_attribute name="name" type="string" _value="Eyes"/>
 	<oaf_attribute name="description" type="string" _value="A set of eyeballs for your panel"/>
 	<oaf_attribute name="panel:icon" type="string" value="gnome-eyes-applet"/>
 	<oaf_attribute name="bugzilla:bugzilla" type="string" value="GNOME"/>
