@@ -1,3 +1,10 @@
+2007-11-04  Callum McKenzie  <callum@spooky-possum.org>
+
+	* geyes.c: 
+	* GNOME_GeyesApplet.server.in.in: De-g-isfy geyes. It is now known
+	as Eyes in its user-visible parts. Suggestion by Matthias Clasen
+	(Bug #349431).
+
 2007-07-17  Jaap Haitsma <jaap@haitsma.org>
 
 	* GNOME_GeyesApplet.xml: Use gtk-about i.s.o. gnome-stock-about
